2_Parser/y.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier identifier SEMI
    7                | type_specifier identifier LBRACE number RBRACE SEMI

    8 type_specifier: INT
    9               | VOID

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN compound_stmt

   11 params: param_list
   12       | VOID

   13 param_list: param_list COMMA param
   14           | param

   15 param: type_specifier identifier
   16      | type_specifier identifier LBRACE RBRACE

   17 compound_stmt: LCURLY local_declarations statement_list RCURLY

   18 local_declarations: local_declarations var_declaration
   19                   | empty

   20 statement_list: statement_list statement
   21               | empty

   22 statement: selection_stmt
   23          | expression_stmt
   24          | compound_stmt
   25          | iteration_stmt
   26          | return_stmt

   27 selection_stmt: IF LPAREN expression RPAREN statement ELSE statement
   28               | IF LPAREN expression RPAREN statement

   29 expression_stmt: expression SEMI
   30                | SEMI

   31 iteration_stmt: WHILE LPAREN expression RPAREN statement

   32 return_stmt: RETURN SEMI
   33            | RETURN expression SEMI

   34 expression: var ASSIGN expression
   35           | simple_expression

   36 var: identifier
   37    | identifier LBRACE expression RBRACE

   38 simple_expression: additive_expression relop additive_expression
   39                  | additive_expression

   40 relop: LE
   41      | LT
   42      | GT
   43      | GE
   44      | EQ
   45      | NE

   46 additive_expression: additive_expression addop term
   47                    | term

   48 addop: PLUS
   49      | MINUS

   50 term: term mulop factor
   51     | factor

   52 mulop: TIMES
   53      | OVER

   54 factor: LPAREN expression RPAREN
   55       | var
   56       | call
   57       | number

   58 call: identifier LPAREN args RPAREN

   59 args: arg_list
   60     | empty

   61 arg_list: arg_list COMMA expression
   62         | expression

   63 identifier: ID

   64 number: NUM

   65 empty: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 27 28
    WHILE (259) 31
    RETURN (260) 32 33
    INT (261) 8
    VOID (262) 9 12
    RPAREN (263) 10 27 28 31 54 58
    ELSE (264) 27
    ID (265) 63
    NUM (266) 64
    EQ (267) 44
    NE (268) 45
    LT (269) 41
    LE (270) 40
    GT (271) 42
    GE (272) 43
    LPAREN (273) 10 27 28 31 54 58
    LBRACE (274) 7 16 37
    RBRACE (275) 7 16 37
    LCURLY (276) 17
    RCURLY (277) 17
    COMMA (278) 13 61
    SEMI (279) 6 7 29 30 32 33
    ERROR (280)
    PLUS (281) 48
    MINUS (282) 49
    TIMES (283) 52
    OVER (284) 53
    ASSIGN (285) 34


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    program (32)
        on left: 1
        on right: 0
    declaration_list (33)
        on left: 2 3
        on right: 1 2
    declaration (34)
        on left: 4 5
        on right: 2 3
    var_declaration (35)
        on left: 6 7
        on right: 4 18
    type_specifier (36)
        on left: 8 9
        on right: 6 7 10 15 16
    fun_declaration (37)
        on left: 10
        on right: 5
    params (38)
        on left: 11 12
        on right: 10
    param_list (39)
        on left: 13 14
        on right: 11 13
    param (40)
        on left: 15 16
        on right: 13 14
    compound_stmt (41)
        on left: 17
        on right: 10 24
    local_declarations (42)
        on left: 18 19
        on right: 17 18
    statement_list (43)
        on left: 20 21
        on right: 17 20
    statement (44)
        on left: 22 23 24 25 26
        on right: 20 27 28 31
    selection_stmt (45)
        on left: 27 28
        on right: 22
    expression_stmt (46)
        on left: 29 30
        on right: 23
    iteration_stmt (47)
        on left: 31
        on right: 25
    return_stmt (48)
        on left: 32 33
        on right: 26
    expression (49)
        on left: 34 35
        on right: 27 28 29 31 33 34 37 54 61 62
    var (50)
        on left: 36 37
        on right: 34 55
    simple_expression (51)
        on left: 38 39
        on right: 35
    relop (52)
        on left: 40 41 42 43 44 45
        on right: 38
    additive_expression (53)
        on left: 46 47
        on right: 38 39 46
    addop (54)
        on left: 48 49
        on right: 46
    term (55)
        on left: 50 51
        on right: 46 47 50
    mulop (56)
        on left: 52 53
        on right: 50
    factor (57)
        on left: 54 55 56 57
        on right: 50 51
    call (58)
        on left: 58
        on right: 56
    args (59)
        on left: 59 60
        on right: 58
    arg_list (60)
        on left: 61 62
        on right: 59 61
    identifier (61)
        on left: 63
        on right: 6 7 10 15 16 36 37 58
    number (62)
        on left: 64
        on right: 7 57
    empty (63)
        on left: 65
        on right: 19 21 60


State 0

    0 $accept: • program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


State 1

    8 type_specifier: INT •

    $default  reduce using rule 8 (type_specifier)


State 2

    9 type_specifier: VOID •

    $default  reduce using rule 9 (type_specifier)


State 3

    0 $accept: program • $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list •
    2 declaration_list: declaration_list • declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


State 5

    3 declaration_list: declaration •

    $default  reduce using rule 3 (declaration_list)


State 6

    4 declaration: var_declaration •

    $default  reduce using rule 4 (declaration)


State 7

    6 var_declaration: type_specifier • identifier SEMI
    7                | type_specifier • identifier LBRACE number RBRACE SEMI
   10 fun_declaration: type_specifier • identifier LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11

    identifier  go to state 12


State 8

    5 declaration: fun_declaration •

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end •

    $default  accept


State 10

    2 declaration_list: declaration_list declaration •

    $default  reduce using rule 2 (declaration_list)


State 11

   63 identifier: ID •

    $default  reduce using rule 63 (identifier)


State 12

    6 var_declaration: type_specifier identifier • SEMI
    7                | type_specifier identifier • LBRACE number RBRACE SEMI
   10 fun_declaration: type_specifier identifier • LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 13
    LBRACE  shift, and go to state 14
    SEMI    shift, and go to state 15


State 13

   10 fun_declaration: type_specifier identifier LPAREN • params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 16

    type_specifier  go to state 17
    params          go to state 18
    param_list      go to state 19
    param           go to state 20


State 14

    7 var_declaration: type_specifier identifier LBRACE • number RBRACE SEMI

    NUM  shift, and go to state 21

    number  go to state 22


State 15

    6 var_declaration: type_specifier identifier SEMI •

    $default  reduce using rule 6 (var_declaration)


State 16

    9 type_specifier: VOID •
   12 params: VOID •

    RPAREN    reduce using rule 12 (params)
    $default  reduce using rule 9 (type_specifier)


State 17

   15 param: type_specifier • identifier
   16      | type_specifier • identifier LBRACE RBRACE

    ID  shift, and go to state 11

    identifier  go to state 23


State 18

   10 fun_declaration: type_specifier identifier LPAREN params • RPAREN compound_stmt

    RPAREN  shift, and go to state 24


State 19

   11 params: param_list •
   13 param_list: param_list • COMMA param

    COMMA  shift, and go to state 25

    $default  reduce using rule 11 (params)


State 20

   14 param_list: param •

    $default  reduce using rule 14 (param_list)


State 21

   64 number: NUM •

    $default  reduce using rule 64 (number)


State 22

    7 var_declaration: type_specifier identifier LBRACE number • RBRACE SEMI

    RBRACE  shift, and go to state 26


State 23

   15 param: type_specifier identifier •
   16      | type_specifier identifier • LBRACE RBRACE

    LBRACE  shift, and go to state 27

    $default  reduce using rule 15 (param)


State 24

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN • compound_stmt

    LCURLY  shift, and go to state 28

    compound_stmt  go to state 29


State 25

   13 param_list: param_list COMMA • param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 17
    param           go to state 30


State 26

    7 var_declaration: type_specifier identifier LBRACE number RBRACE • SEMI

    SEMI  shift, and go to state 31


State 27

   16 param: type_specifier identifier LBRACE • RBRACE

    RBRACE  shift, and go to state 32


State 28

   17 compound_stmt: LCURLY • local_declarations statement_list RCURLY

    $default  reduce using rule 65 (empty)

    local_declarations  go to state 33
    empty               go to state 34


State 29

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN compound_stmt •

    $default  reduce using rule 10 (fun_declaration)


State 30

   13 param_list: param_list COMMA param •

    $default  reduce using rule 13 (param_list)


State 31

    7 var_declaration: type_specifier identifier LBRACE number RBRACE SEMI •

    $default  reduce using rule 7 (var_declaration)


State 32

   16 param: type_specifier identifier LBRACE RBRACE •

    $default  reduce using rule 16 (param)


State 33

   17 compound_stmt: LCURLY local_declarations • statement_list RCURLY
   18 local_declarations: local_declarations • var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 65 (empty)

    var_declaration  go to state 35
    type_specifier   go to state 36
    statement_list   go to state 37
    empty            go to state 38


State 34

   19 local_declarations: empty •

    $default  reduce using rule 19 (local_declarations)


State 35

   18 local_declarations: local_declarations var_declaration •

    $default  reduce using rule 18 (local_declarations)


State 36

    6 var_declaration: type_specifier • identifier SEMI
    7                | type_specifier • identifier LBRACE number RBRACE SEMI

    ID  shift, and go to state 11

    identifier  go to state 39


State 37

   17 compound_stmt: LCURLY local_declarations statement_list • RCURLY
   20 statement_list: statement_list • statement

    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43
    LCURLY  shift, and go to state 28
    RCURLY  shift, and go to state 44
    SEMI    shift, and go to state 45

    compound_stmt        go to state 46
    statement            go to state 47
    selection_stmt       go to state 48
    expression_stmt      go to state 49
    iteration_stmt       go to state 50
    return_stmt          go to state 51
    expression           go to state 52
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 38

   21 statement_list: empty •

    $default  reduce using rule 21 (statement_list)


State 39

    6 var_declaration: type_specifier identifier • SEMI
    7                | type_specifier identifier • LBRACE number RBRACE SEMI

    LBRACE  shift, and go to state 14
    SEMI    shift, and go to state 15


State 40

   27 selection_stmt: IF • LPAREN expression RPAREN statement ELSE statement
   28               | IF • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 61


State 41

   31 iteration_stmt: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 62


State 42

   32 return_stmt: RETURN • SEMI
   33            | RETURN • expression SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43
    SEMI    shift, and go to state 63

    expression           go to state 64
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 43

   54 factor: LPAREN • expression RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    expression           go to state 65
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 44

   17 compound_stmt: LCURLY local_declarations statement_list RCURLY •

    $default  reduce using rule 17 (compound_stmt)


State 45

   30 expression_stmt: SEMI •

    $default  reduce using rule 30 (expression_stmt)


State 46

   24 statement: compound_stmt •

    $default  reduce using rule 24 (statement)


State 47

   20 statement_list: statement_list statement •

    $default  reduce using rule 20 (statement_list)


State 48

   22 statement: selection_stmt •

    $default  reduce using rule 22 (statement)


State 49

   23 statement: expression_stmt •

    $default  reduce using rule 23 (statement)


State 50

   25 statement: iteration_stmt •

    $default  reduce using rule 25 (statement)


State 51

   26 statement: return_stmt •

    $default  reduce using rule 26 (statement)


State 52

   29 expression_stmt: expression • SEMI

    SEMI  shift, and go to state 66


State 53

   34 expression: var • ASSIGN expression
   55 factor: var •

    ASSIGN  shift, and go to state 67

    $default  reduce using rule 55 (factor)


State 54

   35 expression: simple_expression •

    $default  reduce using rule 35 (expression)


State 55

   38 simple_expression: additive_expression • relop additive_expression
   39                  | additive_expression •
   46 additive_expression: additive_expression • addop term

    EQ     shift, and go to state 68
    NE     shift, and go to state 69
    LT     shift, and go to state 70
    LE     shift, and go to state 71
    GT     shift, and go to state 72
    GE     shift, and go to state 73
    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 39 (simple_expression)

    relop  go to state 76
    addop  go to state 77


State 56

   47 additive_expression: term •
   50 term: term • mulop factor

    TIMES  shift, and go to state 78
    OVER   shift, and go to state 79

    $default  reduce using rule 47 (additive_expression)

    mulop  go to state 80


State 57

   51 term: factor •

    $default  reduce using rule 51 (term)


State 58

   56 factor: call •

    $default  reduce using rule 56 (factor)


State 59

   36 var: identifier •
   37    | identifier • LBRACE expression RBRACE
   58 call: identifier • LPAREN args RPAREN

    LPAREN  shift, and go to state 81
    LBRACE  shift, and go to state 82

    $default  reduce using rule 36 (var)


State 60

   57 factor: number •

    $default  reduce using rule 57 (factor)


State 61

   27 selection_stmt: IF LPAREN • expression RPAREN statement ELSE statement
   28               | IF LPAREN • expression RPAREN statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    expression           go to state 83
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 62

   31 iteration_stmt: WHILE LPAREN • expression RPAREN statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    expression           go to state 84
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 63

   32 return_stmt: RETURN SEMI •

    $default  reduce using rule 32 (return_stmt)


State 64

   33 return_stmt: RETURN expression • SEMI

    SEMI  shift, and go to state 85


State 65

   54 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 86


State 66

   29 expression_stmt: expression SEMI •

    $default  reduce using rule 29 (expression_stmt)


State 67

   34 expression: var ASSIGN • expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    expression           go to state 87
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 68

   44 relop: EQ •

    $default  reduce using rule 44 (relop)


State 69

   45 relop: NE •

    $default  reduce using rule 45 (relop)


State 70

   41 relop: LT •

    $default  reduce using rule 41 (relop)


State 71

   40 relop: LE •

    $default  reduce using rule 40 (relop)


State 72

   42 relop: GT •

    $default  reduce using rule 42 (relop)


State 73

   43 relop: GE •

    $default  reduce using rule 43 (relop)


State 74

   48 addop: PLUS •

    $default  reduce using rule 48 (addop)


State 75

   49 addop: MINUS •

    $default  reduce using rule 49 (addop)


State 76

   38 simple_expression: additive_expression relop • additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var                  go to state 88
    additive_expression  go to state 89
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 77

   46 additive_expression: additive_expression addop • term

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var         go to state 88
    term        go to state 90
    factor      go to state 57
    call        go to state 58
    identifier  go to state 59
    number      go to state 60


State 78

   52 mulop: TIMES •

    $default  reduce using rule 52 (mulop)


State 79

   53 mulop: OVER •

    $default  reduce using rule 53 (mulop)


State 80

   50 term: term mulop • factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var         go to state 88
    factor      go to state 91
    call        go to state 58
    identifier  go to state 59
    number      go to state 60


State 81

   58 call: identifier LPAREN • args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    $default  reduce using rule 65 (empty)

    expression           go to state 92
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    args                 go to state 93
    arg_list             go to state 94
    identifier           go to state 59
    number               go to state 60
    empty                go to state 95


State 82

   37 var: identifier LBRACE • expression RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    expression           go to state 96
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 83

   27 selection_stmt: IF LPAREN expression • RPAREN statement ELSE statement
   28               | IF LPAREN expression • RPAREN statement

    RPAREN  shift, and go to state 97


State 84

   31 iteration_stmt: WHILE LPAREN expression • RPAREN statement

    RPAREN  shift, and go to state 98


State 85

   33 return_stmt: RETURN expression SEMI •

    $default  reduce using rule 33 (return_stmt)


State 86

   54 factor: LPAREN expression RPAREN •

    $default  reduce using rule 54 (factor)


State 87

   34 expression: var ASSIGN expression •

    $default  reduce using rule 34 (expression)


State 88

   55 factor: var •

    $default  reduce using rule 55 (factor)


State 89

   38 simple_expression: additive_expression relop additive_expression •
   46 additive_expression: additive_expression • addop term

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 38 (simple_expression)

    addop  go to state 77


State 90

   46 additive_expression: additive_expression addop term •
   50 term: term • mulop factor

    TIMES  shift, and go to state 78
    OVER   shift, and go to state 79

    $default  reduce using rule 46 (additive_expression)

    mulop  go to state 80


State 91

   50 term: term mulop factor •

    $default  reduce using rule 50 (term)


State 92

   62 arg_list: expression •

    $default  reduce using rule 62 (arg_list)


State 93

   58 call: identifier LPAREN args • RPAREN

    RPAREN  shift, and go to state 99


State 94

   59 args: arg_list •
   61 arg_list: arg_list • COMMA expression

    COMMA  shift, and go to state 100

    $default  reduce using rule 59 (args)


State 95

   60 args: empty •

    $default  reduce using rule 60 (args)


State 96

   37 var: identifier LBRACE expression • RBRACE

    RBRACE  shift, and go to state 101


State 97

   27 selection_stmt: IF LPAREN expression RPAREN • statement ELSE statement
   28               | IF LPAREN expression RPAREN • statement

    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43
    LCURLY  shift, and go to state 28
    SEMI    shift, and go to state 45

    compound_stmt        go to state 46
    statement            go to state 102
    selection_stmt       go to state 48
    expression_stmt      go to state 49
    iteration_stmt       go to state 50
    return_stmt          go to state 51
    expression           go to state 52
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 98

   31 iteration_stmt: WHILE LPAREN expression RPAREN • statement

    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43
    LCURLY  shift, and go to state 28
    SEMI    shift, and go to state 45

    compound_stmt        go to state 46
    statement            go to state 103
    selection_stmt       go to state 48
    expression_stmt      go to state 49
    iteration_stmt       go to state 50
    return_stmt          go to state 51
    expression           go to state 52
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 99

   58 call: identifier LPAREN args RPAREN •

    $default  reduce using rule 58 (call)


State 100

   61 arg_list: arg_list COMMA • expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    expression           go to state 104
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 101

   37 var: identifier LBRACE expression RBRACE •

    $default  reduce using rule 37 (var)


State 102

   27 selection_stmt: IF LPAREN expression RPAREN statement • ELSE statement
   28               | IF LPAREN expression RPAREN statement •

    ELSE  shift, and go to state 105

    $default  reduce using rule 28 (selection_stmt)


State 103

   31 iteration_stmt: WHILE LPAREN expression RPAREN statement •

    $default  reduce using rule 31 (iteration_stmt)


State 104

   61 arg_list: arg_list COMMA expression •

    $default  reduce using rule 61 (arg_list)


State 105

   27 selection_stmt: IF LPAREN expression RPAREN statement ELSE • statement

    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43
    LCURLY  shift, and go to state 28
    SEMI    shift, and go to state 45
